nickel-lang-lib/tests/integration/typecheck/fail/enum_match_mismatched_branch_types.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# found = 'Bool'
match { 'foo => 3, 'bar => true } 'bar : Number